Horizontal and Vertical Bar
The bar was made and did some style to it, if the resolution gets lower than 940px it will be a vertical bar! (Side Bar)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     
     <nav>
-    <div><a href="#">Nice Site</a></div>
+    <div class="menu">
+        <div class="logo"><a href="#">SuperCoolLogo☆</a></div>
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
@@ -17,6 +18,7 @@
         <li><a href="#">Contact</a></li>
         <li><a href="#">Feedback</a></li>
     </ul>
+    </div>
     </nav>
 
 </body>
